exports[`RangeInput applies translations 1`] = `
<form
  className="ais-RangeInput__root"
  onSubmit={[Function]}>
  <label
    className="ais-RangeInput__labelMin">
    <input
      className="ais-RangeInput__inputMin"
      onChange={[Function]}
      type="number"
      value={0} />
  </label>
  <span
    className="ais-RangeInput__separator">
    SEPARATOR
  </span>
  <label
    className="ais-RangeInput__labelMax">
    <input
      className="ais-RangeInput__inputMax"
      onChange={[Function]}
      type="number"
      value={100} />
  </label>
  <button
    className="ais-RangeInput__submit"
    type="submit">
    SUBMIT
  </button>
</form>
`;

exports[`RangeInput supports passing max/min values 1`] = `
<form
  className="ais-RangeInput__root"
  onSubmit={[Function]}>
  <label
    className="ais-RangeInput__labelMin">
    <input
      className="ais-RangeInput__inputMin"
      onChange={[Function]}
      type="number"
      value={0} />
  </label>
  <span
    className="ais-RangeInput__separator">
    to
  </span>
  <label
    className="ais-RangeInput__labelMax">
    <input
      className="ais-RangeInput__inputMax"
      onChange={[Function]}
      type="number"
      value={100} />
  </label>
  <button
    className="ais-RangeInput__submit"
    type="submit">
    ok
  </button>
</form>
`;
